feat: add git push capabilities to colab notebook

--- a/colab_training.ipynb
+++ b/colab_training.ipynb
@@ -4,9 +4,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Treinamento WESAD no Google Colab (com GPU + Checkpoint)\n",
+                "# Treinamento WESAD no Google Colab (com GPU + Checkpoint + Git Sync)\n",
                 "\n",
-                "Este notebook clona o repositório, configura o ambiente, monta o Google Drive para salvar progresso e executa o treinamento."
+                "Este notebook clona o repositório, configura o ambiente, treina o modelo (com checkpoint no Drive) e envia os resultados de volta para o GitHub."
             ]
         },
         {
@@ -20,7 +20,6 @@
                 "drive.mount('/content/drive')\n",
                 "\n",
                 "import os\n",
-                "# Define onde os checkpoints ficarão salvos no Drive\n",
                 "DRIVE_CHECKPOINT_DIR = '/content/drive/MyDrive/wearable_checkpoints'\n",
                 "os.makedirs(DRIVE_CHECKPOINT_DIR, exist_ok=True)\n",
                 "print(f\"Checkpoints serão salvos em: {DRIVE_CHECKPOINT_DIR}\")"
@@ -55,7 +54,6 @@
             "outputs": [],
             "source": [
                 "# 4. Configurar API do Kaggle\n",
-                "# Faça o upload do arquivo kaggle.json aqui\n",
                 "from google.colab import files\n",
                 "\n",
                 "if not os.path.exists(\"kaggle.json\"):\n",
@@ -74,45 +72,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 5. Linkar Checkpoints para o Drive\n",
-                "# O script train_models.py salva 'training_checkpoint_*.pkl' no diretório atual.\n",
-                "# Vamos criar links simbólicos para que o arquivo local aponte para o arquivo no Drive.\n",
-                "# Assim, quando o script salvar, salva direto no Drive.\n",
-                "\n",
+                "# 5. Configurar Checkpoints Persistentes\n",
                 "import glob\n",
                 "\n",
-                "# Nomes esperados dos checkpoints\n",
                 "ckpts = [\"training_checkpoint_mlp_features.pkl\", \"training_checkpoint_lstm_pytorch.pkl\"]\n",
                 "\n",
                 "for ckpt in ckpts:\n",
                 "    drive_path = os.path.join(DRIVE_CHECKPOINT_DIR, ckpt)\n",
                 "    local_path = os.path.join(os.getcwd(), ckpt)\n",
                 "    \n",
-                "    # Se existe no Drive mas não local, linka (Resume)\n",
+                "    # Se existe no Drive, linka para o local (Resume)\n",
                 "    if os.path.exists(drive_path) and not os.path.exists(local_path):\n",
                 "        !ln -s \"{drive_path}\" \"{local_path}\"\n",
-                "        print(f\"Linkado: {local_path} -> {drive_path}\")\n",
-                "    # Se não existe no Drive, cria arquivo vazio lá e linka? \n",
-                "    # Não, o script cria o arquivo. Mas o symlink tem que existir ANTES se quisermos que a escrita vá pro Drive.\n",
-                "    # Solução melhor: O script grava. A gente move ou copia periodicamente? \n",
-                "    # Symlink é arriscado se o arquivo for recriado (delete/writer). O pickle 'wb' trunca.\n",
-                "    # Vamos apenas copiar APÓS a execução ou usar um script wrapper.\n",
-                "    # Melhor: Modificar train_models.py para aceitar argumento --checkpoint-dir? \n",
-                "    # Não posso editar o python agora. \n",
-                "    # Vamos confiar no persistence manual ou symlink reverso.\n",
-                "    \n",
-                "    # TENTATIVA DE SYMLINK PREVENTIVA:\n",
-                "    if not os.path.exists(local_path):\n",
-                "        # Cria placeholder no drive se nao existe\n",
-                "        if not os.path.exists(drive_path):\n",
-                "             # Nao precisa criar, o script vai criar. \n",
-                "             # Mas o symlink precisa apontar para algo?\n",
-                "             pass\n",
-                "    \n",
-                "    # Ok, abordagem simples: Cópia periódica em background ou final.\n",
-                "\n",
-                "print(\"Dica: Se a conexão cair, os arquivos estarão no ./ e não no Drive automaticamente, a menos que copiemos.\")\n",
-                "print(\"Executando com wrapper para copiar checkpoint a cada sujeito (simulação).\")"
+                "        print(f\"Linkado: {local_path} -> {drive_path}\")"
             ]
         },
         {
@@ -121,21 +93,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 6. Executar Treinamento\n",
+                "# 6. Executar Pipeline Completo\n",
+                "# Treina -> Gera Figuras -> Matrizes de Confusao\n",
+                "\n",
                 "!python train_models.py\n",
                 "\n",
-                "# Backup final para o Drive\n",
+                "# Backup de seguranca para o Drive\n",
                 "!cp training_checkpoint_*.pkl \"{DRIVE_CHECKPOINT_DIR}/\" 2>/dev/null || true\n",
-                "!cp training_results.json \"{DRIVE_CHECKPOINT_DIR}/\""
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# 7. Gerar Figuras\n",
+                "!cp training_results.json \"{DRIVE_CHECKPOINT_DIR}/\"\n",
+                "\n",
                 "!python generate_figure_9.py\n",
                 "!python generate_figure_10.py\n",
                 "!python generate_figure_11.py\n",
@@ -148,13 +114,31 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 8. Zipar e Salvar no Drive\n",
-                "!zip -r results_wesad.zip *.json *.png *_model.pkl *_model.pth\n",
-                "!cp results_wesad.zip \"{DRIVE_CHECKPOINT_DIR}/\"\n",
-                "print(f\"Resultados salvos em {DRIVE_CHECKPOINT_DIR}/results_wesad.zip\")\n",
+                "# 7. Atualizar Resultados no GitHub\n",
+                "from getpass import getpass\n",
                 "\n",
-                "from google.colab import files\n",
-                "files.download('results_wesad.zip')"
+                "print(\"Para salvar os resultados no GitHub, insira seu Personal Access Token (PAT):\")\n",
+                "print(\"(Crie um em https://github.com/settings/tokens se não tiver)\")\n",
+                "token = getpass('GitHub PAT: ')\n",
+                "\n",
+                "if token:\n",
+                "    # Configurar Git\n",
+                "    !git config --global user.email \"colab@example.com\"\n",
+                "    !git config --global user.name \"Colab Runner\"\n",
+                "    \n",
+                "    # Adicionar remote com token\n",
+                "    repo_url = \"https://\" + token + \"@github.com/naubergois/wearable_research.git\"\n",
+                "    !git remote set-url origin {repo_url}\n",
+                "    \n",
+                "    # Adicionar arquivos gerados\n",
+                "    !git add *.json *.png *_model.pkl *_model.pth\n",
+                "    \n",
+                "    # Commit e Push\n",
+                "    !git commit -m \"chore: update results from Colab execution\"\n",
+                "    !git push origin main\n",
+                "    print(\"Sucesso! Resultados enviados para o GitHub.\")\n",
+                "else:\n",
+                "    print(\"Token não fornecido. Pulei o push.\")"
             ]
         }
     ],
